# Chem-Machine-Translation

./: .env.example  README.md  pyproject.toml
docs/: architecture.md  model-selection.md
examples/google_patents_eval_subset/: README.md  de.csv  en.csv  fr.csv  google-patents-agentic-10-eval.jsonl  google-patents-subset-100-manifest.jsonl
examples/google_patents_eval_subset_300/: README.md  de.csv  en.csv  es.csv  fr.csv  google-patents-subset-300-manifest.jsonl  nl.csv  pt.csv  zh.csv
scripts/: evaluate_google_patents.py
src/chem_machine_translation/: __init__.py  cli.py  comparison.py  config.py  datasets.py  google_patents.py  huggingface_upload.py  metrics.py  openai_agents.py  prompts.py  schemas.py  text.py  translators.py
tests/: test_cli.py  test_datasets.py  test_google_patents.py  test_huggingface_upload.py  test_translators.py
